# LearnWGPU

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init.bat  init.sh  prompt.txt
assets/models/vanguard/: flair.fbx
assets/shaders/: model.wgsl  shader.wgsl
include/: WBaseVertex.hpp  WBindings.hpp  WCamera.hpp  WEngine.hpp  WInclude.hpp  WMesh.hpp  WModel.hpp  WPipeline.hpp  WRenderBuffer.hpp  WRenderPass.hpp  WSampler.hpp  WTexture.hpp  WTypes.hpp  WUniformBuffer.hpp  WUtils.hpp  WVertexLayout.hpp  glfw3wgpu.hpp  imgui_impl_wgpu.hpp
scripts/: unix.cmake  windows.cmake
src/: WBaseVertex.cpp  WBindings.cpp  WCamera.cpp  WEngine.cpp  WMesh.cpp  WModel.cpp  WPipeline.cpp  WRenderBuffer.cpp  WRenderPass.cpp  WSampler.cpp  WTexture.cpp  WTypes.cpp  WUniformBuffer.cpp  WUtils.cpp  WVertexLayout.cpp  glfw3wgpu.cpp  imgui_impl_wgpu.cpp  main.cpp
